...
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:layout_marginStart="7dp"
            android:weightSum="1.0"
    >
        <TextView
                android:id="@+id/IssueTitle"
                style="@style/h3link"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:ellipsize="marquee"
...
            android:layout_gravity="center_vertical"
            android:src="@drawable/comments"
    />
    <TextView
            style="@style/h2"
            android:layout_marginEnd="5dp"
            android:id="@+id/IssueCommentNum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:text="99"
    />

...
