<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/nothing_to_show"/>

    <LinearLayout
            android:id="@+id/issueLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/RecycleViewIssueSwipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.0"
        >
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/IssueList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
            />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
                android:id="@+id/IssueLastRefreshTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="14sp"
        />

    </LinearLayout>

</FrameLayout>