<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/IssueCommentFrame"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IssueCommentUserImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1.0"
    >
        <TextView
                android:textColor="@color/appPurple"
                android:layout_weight="0.4"
                android:text="Phanthony"
                android:id="@+id/IssueCommentDesc"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        <TextView
                android:layout_weight="0.6"
                android:text="This is the comment body of the issue comment"
                android:id="@+id/IssueCommentBody"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

    </LinearLayout>


</LinearLayout>